search/search.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: search-deployment
spec:
  selector:
    matchLabels:
      app: search
  replicas: 1
  template:
    metadata:
      labels:
        app: search
    spec:
      containers:
        - name: search
          image: search:placeholder_name
          imagePullPolicy: Always
          readinessProbe:
            httpGet:
              path: /
              port: 3333
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 3333
            initialDelaySeconds: 15
            periodSeconds: 10
          resources:
            requests:
              memory: 10Mi
              cpu: 10m
            limits:
              memory: 500Mi
              cpu: 500m
---
apiVersion: v1
kind: Service
metadata:
  name: search-service
spec:
  selector:
    app: search
  ports:
    - name: http
      port: 3333
  type: ClusterIP
